--- a/views/users/register.handlebars
+++ b/views/users/register.handlebars
@@ -3,22 +3,22 @@
     <div class="card card-body">
       <img class="logo" src="/img/logo.png">
       <h3 class="text-center">Account Register</h3>
-      <form>
+      <form method="post" action="/users/register">
         <div class="form-group">
-          <label for="email">Name</label>
-          <input type="email" class="form-control" name="name" required>
+          <label for="name">Name</label>
+          <input type="text" class="form-control" name="name" value="{{ name }}" required>
         </div>
         <div class="form-group">
           <label for="email">Email</label>
-          <input type="email" class="form-control" name="email" required>
+          <input type="email" class="form-control" name="email" value="{{ email }}" required>
         </div>
         <div class="form-group">
           <label for="password">Password</label>
-          <input type="password" class="form-control" name="password" required>
+          <input type="password" class="form-control" name="password" value="{{ password }}" required>
         </div>
         <div class="form-group">
           <label for="condirmPassword">Confirm Password</label>
-          <input type="password" class="form-control" name="condirmPassword" required>
+          <input type="password" class="form-control" name="confirmPassword" value="{{ confirmPassword }}" required>
         </div>
         <button class="btn btn-primary" type="submit">Submit</button>
       </form>
