--- a/views/partials/_msg.handlebars
+++ b/views/partials/_msg.handlebars
@@ -2,7 +2,8 @@
 <div class="alert alert-success alert-dismissible">
     <button type="button" class="close" data-dismiss="alert">&times;</button>{{success_msg}}
 </div>
-{{/if}} {{#if error_msg}}
+{{/if}}
+{{#if error_msg}}
 <div class="alert alert-danger alert-dismissible">
     <button type="button" class="close" data-dismiss="alert">&times;</button>{{error_msg}}
 </div>
