Add info on environment to about page

--- a/views/about.handlebars
+++ b/views/about.handlebars
@@ -1,4 +1,4 @@
 <h1>About</h1>
 <p>This a Node/Express app for jotting down ideas for future Youtube videos</p>
 <p>Version: 1.0.0</p>
-<p>Running since {{ counter }} seconds.</p>
+<p>Running {{ env }} since {{ counter }} seconds.</p>
